# connected-spaces-platform

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONDUCT.md  CONTRIBUTING.md  NOTICE.md  PR_GUIDELINES.md  README.md  conanfile.py  cppcheck_suppressions.txt  deno.json  generate_solution.bat  generate_solution_ios.sh  generate_solution_mac  generate_solution_mac.sh  generate_solution_visionos.sh  gotchas.md  install_prerequisites.ps1  mac-build  mac-build.ts  ngx-scripting-roadmap.html  premake5.lua  premake5_helpers.lua  requirements.txt  run_clang-tidy.py  run_cppcheck_static_analysis.bat  sonar-project.properties
.githooks/: commit-msg  commit-template.txt  pre-commit
.github/: CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: ensure_unity_branch.sh  raise_unity_pr_on_merge.sh  update_changelog_release_tag.py
.github/workflows/: add-documentation-link.yml  add-pr-guidance.yml  check-changelog-for-update.yml  codeql.yml  jira-sync.yml  main-pr-restrict.yml  main.yml  pr-checks.yml  staging-newBranch-restrict.yml  unity-interop-tests.yml  update-changelog-on-tc-publish.yml
CSharpSwig/SwigBuild/: CMakeLists.txt  OfflineRealtimeEngine_CreateEntity.i
CppSharpApp/CppSharpPrototypeApp/TestCppLibFoo/: CMakeLists.txt  Foo.cpp  Foo.h
Examples/Web/: package.json
IntegrationTests/Desktop/: CMakeLists.txt  Main.cpp  README.md  conanfile.txt
LegacyEmscriptenWrapper/: CMakeLists.txt  GenerateLegacyEmscriptenPackage.sh
MultiplayerTestRunner/: CMakeLists.txt  premake5.lua
MultiplayerTestRunner/include/: ErrorCodes.h  ProcessDescriptors.h  TestIdentifiers.h
MultiplayerTestRunner/src/: CLIArgs.cpp  CLIArgs.h  LoginRAII.cpp  LoginRAII.h  Main.cpp  SpaceRAII.cpp  SpaceRAII.h  Utils.cpp  Utils.h
MultiplayerTestRunner/src/InternalUnitTests/: Test_CLI.cpp  Test_LoginRAII.cpp  Test_RunnableTests.cpp  Test_SpaceRAII.cpp
MultiplayerTestRunner/src/RunnableTests/: CreateAvatar.cpp  CreateAvatar.h  CreateConversation.cpp  CreateConversation.h  EventBusPing.cpp  EventBusPing.h  LeaderElection.cpp  LeaderElection.h  LeaderElectionEvent.cpp  LeaderElectionEvent.h  LeaderElectionTick.cpp  LeaderElectionTick.h
Tests/: Map.cpp  RunPlatformTests.bat  SpaceComponentTests.cpp  index.js  main.py  premake5.lua
Tests/CSharp/: premake5.lua
Tests/Docker/: Dockerfile
Tests/Multiplayer/: premake5.lua
Tests/Web/: .gitignore  LICENSE.chromedriver  http_server.py  main.py
Tests/assets/: Guardrails.txt  Test2.json  TestWith Space.json  Testkb.json  checkpoint-basic.json  checkpoint-empty.json  checkpoint-example-empty.json  checkpoint-example-minimal.json  checkpoint-example.json  checkpoint-material.json  checkpoint-parents.json  checpoint-example-sequences.json  components-test.json
Tests/cmake/: test_files.cmake
Tests/html/: index.js
Tests/src/: Awaitable.h  Main.cpp  MultiplayerTestRunnerProcess.cpp  MultiplayerTestRunnerProcess.h  PublicTestBase.cpp  PublicTestBase.h  RAIIMockLogger.h  TestHelpers.cpp  TestHelpers.h
Tools/CppCheck/: cppcheck_suppressions.txt  run_cppcheck_static_analysis.bat
Tools/Emscripten/: EmscriptenFullBuildAndConfigure.bat  EmscriptenFullBuildAndConfigure.sh  EmscriptenFullBuildNoConfigure.bat  EmscriptenFullBuildNoConfigure.sh  OlympusFoundation_WASM_Demo.html  ReplaceComSpec.py  StartEmscriptenServer.py
Tools/Formatter/: RunFormatter.py
Tools/PremakeFixes/: AndroidFixes.lua
Tools/SpaceMigrationTool/: CommandLineParser.cpp  CommandLineParser.h  Helpers.h  SpaceMigrationTool.cpp  SpaceMigrationTool.sln  SpaceMigrationTool.vcxproj  SpaceMigrationTool.vcxproj.filters
Tools/VersionGenerator/: VersionGenerator.py  VersionTemplate.mustache
Tools/VisualStudioNDK21Fix/: VisualStudioNDK21Fix.lua
Tools/WrapperGenerator/: .csharpierrc.json  CSharpWrapperGenerator.py  CWrapperGenerator.py  Config.py  ConnectedSpacesPlatform_WASM.d.ts  MetadataTypes.py  MetadataTypes_Jinja2.py  Parser.py  README.md  TypeScriptWrapperGenerator.py  TypeScriptWrapperGenerator_Jinja2.py  WrapperGenerator.py  package-lock.json  package.json  parser.py  word_reader.py
UnitTesting/: Build.bat  Build_WASM.bat  Build_x64.bat  Generate.bat  Generate_WASM.bat  Generate_x64.bat  README.md  premake5.lua
UnitTesting/include/: classes.h
UnitTesting/scripts/: Config.py  Generate.py  GenerateExports.py  GenerateTests.py
UnitTesting/src/: classes.cpp
UnitTesting/tests/: .gitignore  RunNodeTests.py  RunUnityTests.py
WasmTesting/: Caddyfile  csp-wasm.test.ts  package.json  pretend-to-be-a-browser.ts  readme.md  run-csp-wasm-tests.cmd  testhelpers.ts  tsconfig.json
WasmTesting/html_tests/: .gitignore  CreateAvatar.html  CrossThreadConnectionInterrupted.html  CrossThreadLogCallbackLogin.html  DisconnectWhenNewMultiplayerSessionInitiatedInSpace.html  DisconnectWhenNewMultiplayerSessionInitiatedOutOfSpace.html  EnterSpace.html  EnterSpaceFromCheckpoint.html  Login.html  Offline.html  OutOfSpaceDisconnect.html  SendReceiveNetworkEvent.html
WasmTesting/shared/: csp-initializer.d.ts  csp-initializer.js
cmake/: CSPConfig.cmake.in  common_files.cmake  core_files.cmake  get_version_from_git.cmake  misc_files.cmake  multiplayer_files.cmake  services_files.cmake  shared_files.cmake  version.h.in
modules/: premake5.lua
profiles/host/: android_arm  android_x86_64  emscripten  ios_arm64  linux_clang  linux_gcc  linux_unreal_56  osx_arm  visionos_arm64  windows_msvc  windows_ninja
teamcity/: BootstrapPremake.bat  BuildNPMUE4Package.py  BuildNPMUnityPackage.py  BuildNPMWebPackage.py  BuildWindowsPackage.py  CSPTestTransform.py  Config.py  CopyReadmeToPackage.py  GenerateReadMe.py  GenerateReadMeWithLink.py  GenerateReadme_NEW.py  PrepareUnityPackage.py  PublishCSPForUnity.py  TestReportUploader.py  requirements.txt
teamcity/templates/: asmdef_template.mustache  default_template.mustache  dll_template.mustache  metafile_template.mustache  package_template.mustache  platform_files.json  (+2 more)
(+789 files in other folders)
